# ExpressionKit

./: .gitignore  ARRAY_DICTIONARY_SUMMARY.md  ARRAY_DICTIONARY_SUPPORT.md  ARRAY_DICTIONARY_SUPPORT_EN.md  CMakeLists.txt  ExprTKTest_include-b12d07c.cmake  ExprTKTest_tests-b12d07c.cmake  ExpressionKit.hpp  JAVA_USAGE.md  KOTLIN_USAGE.md  LICENSE  Makefile  Package.swift  README.CN.md  README.md  SWIFT_USAGE.md  TESTING_PARITY.md  TESTING_PARITY_ANALYSIS.md  TESTING_PARITY_DETAILED.md  TESTING_PARITY_RESOLUTION.md  TEST_COUNT_EXPLANATION.md  TYPESCRIPT_USAGE.md  test.cpp
.build/: build.db  plugin-tools.yaml
.build/x86_64-unknown-linux-gnu/debug/: ExpressionKitPackageTests.xctest  description.json
.build/x86_64-unknown-linux-gnu/debug/ExpressionKit.build/: Expression.d  Expression.swiftdeps  ExpressionError.d  ExpressionError.swiftdeps  ExpressionKit.d  ExpressionKit.emit-module.d  ExpressionKit.swiftdeps  SimpleBackend.d  SimpleBackend.swiftdeps  Value.d  Value.swiftdeps  master.priors  output-file-map.json  sources
.build/x86_64-unknown-linux-gnu/debug/ExpressionKitCore.build/: ExpressionKitBridge.cpp.d  module.modulemap
.build/x86_64-unknown-linux-gnu/debug/ExpressionKitPackageDiscoveredTests.build/: ExpressionKitPackageDiscoveredTests.emit-module.d  ExpressionKitTests.d  ExpressionKitTests.swiftdeps  all-discovered-tests.d  all-discovered-tests.swiftdeps  master.priors  output-file-map.json  sources
.build/x86_64-unknown-linux-gnu/debug/ExpressionKitPackageDiscoveredTests.derived/: ExpressionKitTests.swift  all-discovered-tests.swift
.build/x86_64-unknown-linux-gnu/debug/ExpressionKitPackageTests.build/: ExpressionKitPackageTests.emit-module.d  master.priors  output-file-map.json  runner.d  runner.swiftdeps  sources
.build/x86_64-unknown-linux-gnu/debug/ExpressionKitPackageTests.derived/: runner.swift
.build/x86_64-unknown-linux-gnu/debug/ExpressionKitPackageTests.product/: Objects.LinkFileList
.build/x86_64-unknown-linux-gnu/debug/ExpressionKitTests.build/: ExpressionKitTests.d  ExpressionKitTests.emit-module.d  ExpressionKitTests.swiftdeps  master.priors  output-file-map.json  sources
.build/x86_64-unknown-linux-gnu/debug/ModuleCache/1P91TELBM5BVO/: SwiftGlibc-IGSGJKVMPVR1.pcm  SwiftOverlayShims-1HC6F6W8Z022F.pcm  SwiftShims-1HC6F6W8Z022F.pcm  _Builtin_stddef-1X9JKYEY8A7FT.pcm
.build/x86_64-unknown-linux-gnu/debug/ModuleCache/24XZD3WU06P9J/: CDispatch-3NUXS099VSH8E.pcm  Dispatch-3NUXS099VSH8E.pcm  ExpressionKitCore-1C82KR5O9EXU3.pcm  SwiftGlibc-IGSGJKVMPVR1.pcm  SwiftOverlayShims-1HC6F6W8Z022F.pcm  SwiftShims-1HC6F6W8Z022F.pcm  _Builtin_stddef-1X9JKYEY8A7FT.pcm  _FoundationICU-1OBJY3Y16EOFQ.pcm  _SwiftConcurrencyShims-1HC6F6W8Z022F.pcm  _SynchronizationShims-1HC6F6W8Z022F.pcm
.build/x86_64-unknown-linux-gnu/debug/Modules/: ExpressionKit.swiftdoc  ExpressionKit.swiftmodule  ExpressionKit.swiftsourceinfo  ExpressionKitPackageDiscoveredTests.swiftdoc  ExpressionKitPackageDiscoveredTests.swiftmodule  ExpressionKitPackageDiscoveredTests.swiftsourceinfo  ExpressionKitPackageTests.swiftdoc  ExpressionKitPackageTests.swiftmodule  ExpressionKitPackageTests.swiftsourceinfo  ExpressionKitTests.swiftdoc  ExpressionKitTests.swiftmodule  ExpressionKitTests.swiftsourceinfo
.github/: copilot-instructions.md
.github/workflows/: nuget-publish.yml  publish-kotlin.yml  test-status-check.yml  update-test-status.yml
CPP/: CMakeLists.txt  ExpressionDemo  Makefile  demo.cpp  test.cpp  token_demo  token_demo.cpp
CPP/Sources/ExpressionKitCore/: ExpressionKitBridge.cpp
CPP/Sources/ExpressionKitCore/include/: ExpressionKitBridge.h
CSharp/: Directory.Build.props  ExpressionKit.sln  NuGet.config  QUICKSTART.md  README.md
CSharp/Examples/ExpressionKitDemo/: ExpressionKitDemo.csproj  Program.cs
CSharp/ExpressionKit/: ASTNodes.cs  Expression.cs  ExpressionKit.csproj  IEnvironment.cs  Parser.cs  README.md  Token.cs  Value.cs
CSharp/ExpressionKit.Tests/: ExpressionKit.Tests.csproj  ExpressionKitTests.cs
Examples/SwiftExample/: Package.swift
Java/: build.gradle
Java/src/main/java/com/expressionkit/: ASTNode.java  ASTNodes.java  Expression.java  ExpressionException.java  IEnvironment.java  OperatorType.java  Parser.java  SimpleEnvironment.java  StandardFunctions.java  Token.java  TokenType.java  Value.java
Java/src/test/java/com/expressionkit/: ExpressionKitTests.java
Kotlin/: .gitignore  INTEGRATION.md  build.gradle.kts  gradle.properties  settings.gradle.kts
Kotlin/examples/: KotlinExample.kt
Kotlin/src/main/kotlin/com/expressionkit/: ExpressionKit.kt  SimpleEnvironment.kt
Kotlin/src/test/kotlin/: ExpressionKitTest.kt
Sources/ExpressionKit/: Expression.swift  ExpressionKit.swift  SimpleBackend.swift  Value.swift
Sources/ExpressionKitBridge/: ExpressionKitBridge.cpp
Sources/ExpressionKitCore/: ExpressionKitBridge.cpp
Swift/Examples/SwiftExample/: Package.swift
Swift/Examples/SwiftExample/Sources/ExpressionKitExample/: main.swift
Swift/Examples/TernaryTest/: Package.swift
Swift/Examples/TernaryTest/Sources/: main.swift
Swift/Sources/ExpressionKit/: EnvironmentProtocol.swift  Expression.swift  ExpressionError.swift  ExpressionKit.swift  SimpleBackend.swift  SimpleEnvironment.swift  Value.swift
Swift/Sources/ExpressionKitBridge/: ExpressionKitBridge.cpp
Swift/Sources/ExpressionKitBridge/include/: ExpressionKitBridge.h
Swift/Tests/ExpressionKitTests/: ExpressionKitTests.swift
Tests/ExpressionKitTests/: ExpressionKitTests.swift
TypeScript/: .npmignore  INSTALLATION.md  PUBLISHING.md  README.md  package-lock.json  package.json  tsconfig.json
TypeScript/__tests__/: ExpressionKit.test.ts
TypeScript/examples/: basic-usage.ts
TypeScript/src/: ExpressionKit.ts  SimpleEnvironment.ts  index.ts
cmake/: ExpressionKitConfig.cmake.in
scripts/: README.md  analyze_test_mapping.py  analyze_test_parity.py  create_test_explanation.py  enhanced_test_check.sh  install-typescript.sh  run_all_tests.sh  run_cpp_tests.sh  run_csharp_tests.sh  run_java_tests.sh  run_kotlin_tests.sh  run_swift_tests.sh  run_typescript_tests.sh  update_readme.sh
(+66 files in other folders)
